--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,9 +31,13 @@ jobs:
 
       - name: Install flake8
         run: pip install flake8
+        
+      - name: Auto format code with Black
+        run: black .
 
       - name: Run flake8 on Python code
         run: flake8 main.py
+      
 
       # Scan Dockerfile with Checkov
       - name: Run Checkov on Dockerfile
