--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,6 +31,9 @@ jobs:
 
       - name: Install flake8
         run: pip install flake8
+
+      - name: Install black
+        run: pip install black
         
       - name: Auto format code with Black
         run: black .
