--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Full CI/CD Pipeline
+name: CI/CD Pipeline
 
 on:
   push:
@@ -10,48 +10,39 @@ env:
   IMAGE_NAME: prod-large
 
 jobs:
-  build-lint-scan-publish:
+  lint:
+    name: Linting
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Lint Dockerfile
-      - name: Lint Dockerfile with Hadolint
+      - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-          failure-threshold: error
+          failure-threshold: warning
 
-      # Lint Python code
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: Install flake8
-        run: pip install flake8
+      - name: Install linters
+        run: pip install flake8 black
 
-      - name: Install black
-        run: pip install black
-        
-      - name: Auto format code with Black
-        run: black .
+      - name: Run flake8
+        run: flake8 main.py || true
 
-      - name: Run flake8 on Python code
-        run: flake8 main.py
-      
+      - name: Run black check
+        run: black --check . || true
 
-      # Scan Dockerfile with Checkov
-      - name: Run Checkov on Dockerfile
-        uses: bridgecrewio/checkov-action@master
-        with:
-          directory: .
-          framework: dockerfile
-        continue-on-error: true
+  security:
+    name: Security Scan
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-      # Install and run Trivy on file system
-      - name: Install Trivy (latest)
+      - name: Install Trivy
         run: |
           sudo apt-get update
           sudo apt-get install -y curl gnupg lsb-release
@@ -60,26 +51,32 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y trivy
 
-      - name: Trivy scan of filesystem
+      - name: Trivy FS scan
         run: trivy fs . --exit-code 0 --severity HIGH,CRITICAL
 
-      # Build Docker image
       - name: Build Docker image
         run: docker build -t ${{ env.IMAGE_NAME }}:latest .
 
-      # Trivy scan of Docker image
-      - name: Trivy scan of Docker image
+      - name: Trivy Image scan
         run: trivy image ${{ env.IMAGE_NAME }}:latest --exit-code 0 --severity HIGH,CRITICAL
 
-      # Log in to Docker Hub
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
+      - name: Checkov scan
+        uses: bridgecrewio/checkov-action@master
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          directory: .
 
-      # Tag and push Docker image
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker tag ${{ env.IMAGE_NAME }}:latest ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+  build_and_push:
+    name: Docker Build & Push
+    runs-on: ubuntu-latest
+    needs: [lint, security]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Login to DockerHub
+        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
+
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKERHUB_USER }}/prod-large:latest .
+
+      - name: Push Docker image
+        run: docker push ${{ secrets.DOCKERHUB_USER }}/prod-large:latest
