--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,26 +1,28 @@
 name: CI/CD Pipeline
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
 env:
   IMAGE_NAME: prod-large
 
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
   lint:
-    name: Linting
+    name: 🔍 Code Linting
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Lint Dockerfile
+      - name: Lint Dockerfile with Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-          failure-threshold: warning  # 🔸 Не прерывает выполнение
+          failure-threshold: warning
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -31,18 +33,18 @@ jobs:
         run: pip install flake8 black
 
       - name: Run flake8
-        run: |
-          flake8 main.py || true     # 🔸 Не прерывает pipeline
+        run: flake8 main.py || true
 
       - name: Run black check
-        run: |
-          black --check . || true    # 🔸 Не прерывает pipeline
+        run: black --check . || true
 
   security:
-    name: Security Scan
+    name: 🔒 Security Scanning
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Install Trivy
         run: |
@@ -53,35 +55,34 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y trivy
 
-      - name: Trivy FS scan (non-blocking)
-        run: |
-          trivy fs . --exit-code 0 --severity HIGH,CRITICAL
+      - name: Trivy scan (filesystem)
+        run: trivy fs . --exit-code 0 --severity HIGH,CRITICAL
 
-      - name: Build Docker image
+      - name: Docker build for scanning
         run: docker build -t ${{ env.IMAGE_NAME }}:latest .
 
-      - name: Trivy image scan (non-blocking)
-        run: |
-          trivy image ${{ env.IMAGE_NAME }}:latest --exit-code 0 --severity HIGH,CRITICAL
+      - name: Trivy scan (Docker image)
+        run: trivy image ${{ env.IMAGE_NAME }}:latest --exit-code 0 --severity HIGH,CRITICAL
 
-      - name: Checkov scan (non-blocking)
+      - name: Checkov scan
         uses: bridgecrewio/checkov-action@master
         with:
           directory: .
-        continue-on-error: true       # 🔸 Не прерывает pipeline
+        continue-on-error: true
 
   build_and_push:
-    name: Docker Build & Push
+    name: 🐳 Docker Build & Push
     runs-on: ubuntu-latest
     needs: [lint, security]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Log in to DockerHub
+      - name: Set up DockerHub credentials
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
       - name: Build image
         run: docker build -t ${{ secrets.DOCKERHUB_USER }}/prod-large:latest .
 
-      - name: Push image
+      - name: Push to DockerHub
         run: docker push ${{ secrets.DOCKERHUB_USER }}/prod-large:latest
