--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,4 +76,4 @@ jobs:
         run: docker build -t ${{ env.IMAGE_NAME }}:latest .
 
       - name: Push image to DockerHub
-        run: docker push ${{ env.IMAGE_NAME }}:latest
+        run: docker push ${{ env.IMAGE_NAME }}:latest #fix
