--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -76,11 +76,14 @@ jobs:
 
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        
+      - name: Set image tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/prod-large:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/prod-large:${{ env.IMAGE_TAG }} .
 
       - name: Push Docker image
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/prod-large:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/prod-large:${{ env.IMAGE_TAG }}
